2005-07-31  Sebastien Bacher  <seb128@debian.org>

	* gnome-mouse-properties.glade: 
	update of the glade file, no need to restart the session to apply 
	the changes with GTK 2.8 (Closes: #312070).

2005-07-12  Sven Herzberg  <herzi@gnome-de.org>

	* gnome-mouse-properties.c: fix the without HAVE_XCURSOR build

2005-07-10  Sebastien Bacher  <seb128@debian.org>

	* gnome-mouse-properties.c: (cursor_size_from_widget),
	(event_box_button_press_event), (cursor_theme_changed),
	(cursor_font_changed), (cursor_changed),
	(gdk_pixbuf_from_xcursor_image), (populate_tree_model),
	(setup_dialog), (create_dialog):
	* gnome-mouse-properties.glade:
	new cursor theme manager for the mouse capplet, 
	patch by Sven Herzberg <herzi@gnome-de.org> with changes 
	by Matthias Clasen <mclasen@redhat.com> (Closes: #110670).

2005-01-04  Sebastien Bacher  <seb128@debian.org>

	* gnome-mouse-properties.glade: fixed a grammar error (Closes: #131521)

2005-01-02  Sebastien Bacher  <seb128@debian.org>

	* gnome-mouse-properties.glade:
	patch from Heikki Paajanen <hepaajan@iki.fi> (based on the patch
	from Andrew Johnson <acjgenius@earthlink.net>) 
	to not set "close" as the default button (Closes: #98202).

2004-11-09  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: install .desktop file in $(datadir)/applications
	
	* gnome-settings-mouse.desktop.in: add OnlyShowIn=GNOME;

2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1

2004-08-20  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* gnome-mouse-properties.c: (main):
	Use themed icon for WM hint.

2004-06-15  Bastien Nocera  <hadess@hadess.net>

	* .cvsignore: upd

2004-04-15  Jody Goldberg <jody@gnome.org>

	* Release 2.6.1

2004-04-01  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.3

2004-03-30  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.1

2004-03-23  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0

2004-03-11  Jody Goldberg <jody@gnome.org>

	* Release 2.5.4

2004-02-13  Jody Goldberg <jody@gnome.org>
