@@ -1,5 +1,11 @@
 2005-07-31  Sebastien Bacher  <seb128@debian.org>
 
+	* gnome-mouse-properties.c: (delay_value_changed_cb),
+	(setup_dialog): 
+	update dynamically the double click label (Closes: #166908).
+
+2005-07-31  Sebastien Bacher  <seb128@debian.org>
+
 	* gnome-mouse-properties.glade: 
 	update of the glade file, no need to restart the session to apply 
 	the changes with GTK 2.8 (Closes: #312070).
